# jmsd_tpc_openal_soft

./: .gitmodules  CMakeLists.txt  README.md
_tpc_cmake_settings/: tpc-openal-lib-set-compiler-settings.cmake
_tpc_cmake_settings/compiler-settings/: tpc-openal-lib-set-linux-compiler-settings.cmake  tpc-openal-lib-set-windows-compiler-settings.cmake
tpc_openal/: CMakeLists.txt
